# pyproject-toml

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.py
pyproject_toml/: __init__.py  project.py  utils.py
pyproject_toml/build_system/: __init__.py  build_backend.py
pyproject_toml/tool/: __init__.py  pyproject_toml.py
tests/: fixtures.py  test_build_backend.py
