[build-system]
requires = ["pyproject-toml>=0.0.6"]
build-backend = "pyproject_toml.build_system.build_backend"
backend-path = ["."]

[project]
name = "pyproject-toml"
version = "0.0.9"
description = "Project intend to implement PEP 517, 518, 621, 631 and so on."
readme = "README.rst"
authors = [{ name = "Tang Ziya", email = "tcztzy@hotmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["setuptools>=42", "wheel", "toml", "jsonschema"]

[project.urls]
homepage = "https://github.com/pyproject-toml/pyproject-toml"

[tool.pyproject-toml]
packages = ["pyproject_toml", "pyproject_toml.build_system", "pyproject_toml.tool"]
