[build-system]
requires = ["pyproject-toml>=0.1.0", "pydantic-settings>=2.6.1", "spdx-tools>=0.8.3", "packaging-classifiers>=1.0.0rc5"]
build-backend = "pyproject_toml.build_system.build_backend"
backend-path = ["."]

[project]
name = "pyproject-toml"
version = "0.1.1"
description = "Project intend to implement PEP 517, 518, 621, 631 and so on."
readme = "README.rst"
authors = [{ name = "Tang Ziya", email = "tcztzy@hotmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">= 3.9, < 3.14"
dependencies = [
    "setuptools >= 75.4.0",
    "wheel>=0.45.0",
    "tomli>=2.1.0; python_version < '3.11'",
    "pydantic>=2.9.2",
    "packaging>=24.2",
    "packaging-classifiers>=1.0.0rc5",
    "pydantic-settings>=2.6.1",
    "spdx-tools>=0.8.3",
]

[project.optional-dependencies]
dev = [
    "jaraco-path>=3.7.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "tox-uv>=1.16.0",
]

[project.urls]
homepage = "https://github.com/pyproject-toml/pyproject-toml"

[tool.pyproject-toml]
packages = ["pyproject_toml", "pyproject_toml.build_system"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.tox]
requires = ["tox>=4"]
env_list = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = [
    "jaraco.path",
    "pytest",
    "pytest-cov",
    "setuptools",
]
commands = [["pytest"]]
